@@ -6,6 +6,10 @@ Bazaar Release Notes
 
   API BREAKS:
 
+    * ``Branch.abspath`` is deprecated; use the Tree or Transport 
+      instead.
+      (Martin Pool)
+
     * ``LockableFiles.put_utf8``, ``put_bytes`` and ``controlfilename``
       are now deprecated in favor of using Transport operations.
       (Martin Pool)
